# linux-c

./: CMakeLists.txt  bad_ret.c  chmod_test.c  get_opt.c  hash.c  hash.h  hash_test.c  kill_man.c  m.h  main.cpp  makeFile2Camke.c  reverse.c  select.cpp  sig_test.c  str_error.c  str_to.c  struct-test.c  timer_test.c  week.c
