cmake_minimum_required(VERSION 3.13)
project(tcp)

set(CMAKE_CXX_STANDARD 14)

add_executable(tcp main.cpp )
add_executable(select  select.cpp )
add_executable(week  week.c)
add_executable(reverse  reverse.c )
add_executable(bad bad_ret.c m.h  )
add_executable(kill_man kill_man.c)
add_executable(struct-test struct-test.c)
add_executable(chmod_test chmod_test.c)
add_executable(str_error str_error.c  )
add_executable(sig_test sig_test.c  )
add_executable(time_test timer_test.c  )
add_executable(str_to str_to.c)